# Med-Bot

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  quota.json  reports.py  start.bat
api/func/auth/: auth.py  jwt_handler.py
api/func/hospitals/: appointments_crud.py  doctors_crud.py  hospitals_crud.py
api/func/reports/: reports.py
api/routers/: appointments.py  auth.py  doctors.py  hospitals.py  reports.py
core/: config.py
cruds/auth/: jwt_handler.py
db/: conn.py
models/: appointments.py  booking.py  doctors.py  hospitals.py  medicine.py  reports.py  user.py
routers/: auth.py
services/report/: extract_report.py  llm.py  quota.py
